force-app/main/default/objects/WarehouseInLineItem__c/WarehouseInLineItem__c.object-meta.xml
<CustomObject>
    <label>대리점입고상세</label>
    <pluralLabel>Warehouse In Line Items</pluralLabel>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>