force-app/main/default/objects/WarehouseInLineItem__c/fields/InventoryOutOrderLineItem__c.field-meta.xml
<CustomField>
    <fullName>InventoryOutOrderLineItem__c</fullName>
    <description>출고상세 Name필드</description>
    <label>Inventory Out Order LineItem</label>
    <referenceTo>InventoryOutOrderLineItem__c</referenceTo>
    <relationshipLabel>Warehouse In LineItem</relationshipLabel>
    <relationshipName>WarehouseInLineItem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>