force-app/main/default/objects/WarehouseInLineItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Warehouse In LineItem</relationshipLabel>
    <relationshipName>WarehouseInLineItem</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>