force-app/main/default/objects/WarehouseInLineItem__c/fields/SkuOption5__c.field-meta.xml
<CustomField>
    <fullName>SkuOption5__c</fullName>
    <label>Sku Option5</label>
    <length>100</length>
    <type>Text</type>
</CustomField>