force-app/main/default/objects/WarehouseInLineItem__c/fields/WarehousingNo__c.field-meta.xml
<CustomField>
    <fullName>WarehousingNo__c</fullName>
    <label>Warehousing No</label>
    <referenceTo>WarehouseIn__c</referenceTo>
    <relationshipLabel>Warehouse In LineItem</relationshipLabel>
    <relationshipName>WarehouseInLineItem</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>